--- a/Backend/package.json
+++ b/Backend/package.json
@@ -22,6 +22,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.9",
-    "resend": "^4.6.0"
+    "resend": "^4.6.0",
+    "google-auth-library": "^8.0.0",
   }
 }
