--- a/Backend/package.json
+++ b/Backend/package.json
@@ -23,6 +23,6 @@
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.9",
     "resend": "^4.6.0",
-    "google-auth-library": "^8.0.0",
+    "google-auth-library": "^8.0.0"
   }
 }
